--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
